--- a/sweetwater/src/app/footer/bottom_nav_bar.component.html
+++ b/sweetwater/src/app/footer/bottom_nav_bar.component.html
@@ -1,4 +1,4 @@
-<nav style="background-color:#dad5cc" class="navbar contaniner-fluid">
+<nav style="background-color:#eeebe5" class="navbar contaniner-fluid">
     <div>
         <ul class="nav list-group">
             <li class="nav-item">
