--- a/sweetwater/src/app/upper_card_block/upper_card_block.component.html
+++ b/sweetwater/src/app/upper_card_block/upper_card_block.component.html
@@ -1,17 +1,18 @@
-<div class="container">
-
-    <div class="row row-cols-1 row-cols-6 align-items-stretch g-4 py-5">
-        <div class="col">
+<div>
+    <div class="d-flex justify-content-center">
+        <h1>{{title}}</h1>
+    </div>
+    <div class="d-flex justify-content-evenly">
+        <div align-self-stretch>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
-                    <img class="image" alt=""
-                        src="https://media.sweetwater.com/api/i/f-webp__h-200__w-200__q-80__ha-279f725ca11da3dc__hmac-9a6456d8fc700289aded7d5647d0642cd40fde45/home/cats/ENCTEBGH.png.auto.webp">
+                    <img class="image" alt="" src={{cardsrc}}>
                 </div>
-                <p>Guitars</p>
+                <p>{{cardname}}</p>
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -21,7 +22,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -30,7 +31,7 @@
                 <p>Drums & Percussion</p>
             </a>
         </div>
-        <div class="col">
+        <div>
             <a href=# class="link">
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -40,7 +41,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -50,7 +51,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -60,9 +61,9 @@
             </a>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-lg-5 align-items-stretch g-4 py-5">
+    <div class="d-flex align-self-stretch justify-content-evenly">
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -72,7 +73,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -81,7 +82,7 @@
                 <p>DJ Equipment</p>
             </a>
         </div>
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -91,7 +92,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
@@ -101,7 +102,7 @@
             </a>
         </div>
 
-        <div class="col">
+        <div>
             <a href=#>
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
