--- a/sweetwater/src/app/app.component.html
+++ b/sweetwater/src/app/app.component.html
@@ -1,7 +1,4 @@
 <head><title>sweetwater</title></head>
 <body>
-    <div><app_top_nav_bar></app_top_nav_bar></div>
-    <div><app_upper_card_block></app_upper_card_block></div>
-    <div><app_lower_card_block></app_lower_card_block></div>
-    <div><app_bottom_nav_bar></app_bottom_nav_bar></div>
+    <app_template></app_template>
 </body>
