--- a/sweetwater/src/app/lower_card_block/lower_card_block.component.html
+++ b/sweetwater/src/app/lower_card_block/lower_card_block.component.html
@@ -1,4 +1,4 @@
-<div class="container px-4 py-5" id="custom-cards">
+<div>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
         <div class="col">
