--- a/sweetwater/src/app/template/template.component.html
+++ b/sweetwater/src/app/template/template.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
+    <button>
+        <a routerLink="/home">Home</a>
+    </button>
+</div>
+<div class="container-fluid">
     <div>
         <app_top_nav_bar></app_top_nav_bar>
     </div>
-    <div>
-        <app_upper_card_block></app_upper_card_block>
-    </div>
-    <div>
-        <app_lower_card_block></app_lower_card_block>
-    </div>
+    <router-outlet></router-outlet>
     <div>
         <app_bottom_nav_bar></app_bottom_nav_bar>
     </div>
