--- a/sweetwater/src/app/upper_card_block/upper_card_block.component.html
+++ b/sweetwater/src/app/upper_card_block/upper_card_block.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="d-flex justify-content-evenly">
         <div align-self-stretch>
-            <a href=#>
+            <a routerLink="/guitars">
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt="" src={{cardsrc}}>
                 </div>
@@ -13,7 +13,7 @@
         </div>
 
         <div>
-            <a href=#>
+            <a routerLink="/studioandrecording">
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
                         src="https://media.sweetwater.com/api/i/f-webp__h-200__w-200__q-80__ha-f7a3dcca8cc514c4__hmac-dc973b628aaf346df916e9f87c4a046e7944fa11/home/cats/Arrow-small.png.auto.webp">
@@ -23,7 +23,7 @@
         </div>
 
         <div>
-            <a href=#>
+            <a routerLink="/drums">
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
                         src="https://media.sweetwater.com/api/i/f-webp__h-200__w-200__q-80__ha-8ecbba1ca439ad66__hmac-e6f96d96906a054012a29f5d944bfdd04c0ae829/home/cats/LM402.png.auto.webp">
@@ -32,7 +32,7 @@
             </a>
         </div>
         <div>
-            <a href=# class="link">
+            <a routerLink="/bass" class="link">
                 <div class="card overflow-hidden shadow-lg">
                     <img class="image" alt=""
                         src="https://media.sweetwater.com/api/i/f-webp__h-200__w-200__q-80__ha-3c36217e99283b77__hmac-40e1171e689a5816ffb9cbe11263a77584cf1c19/home/cats/PBassAPR3SB.png.auto.webp">
