--- a/sweetwater/src/app/body/small_blog_teaser.component.html
+++ b/sweetwater/src/app/body/small_blog_teaser.component.html
@@ -1,9 +1,15 @@
-<a href="#">
-    <div class="card p-4">
-        <img src={{imagePath}} class="card-img-top img-fluid" alt="...">
-        <div class="card-body">
-            <p class="card-title">{{title}}</p>
-            <p class="card-text">{{date}}</p>
+<div class="d-flex flex-row justify-content-evenly">
+    <div *ngFor="let blog of bloglist;">
+        <div class="flex-fill">
+            <a href="#">
+                <div class="card p-4">
+                    <img src={{blog.imagePath}} class="card-img-top img-fluid" alt="...">
+                    <div class="card-body">
+                        <p class="card-title">{{blog.title}}</p>
+                        <p class="card-text">{{blog.date}}</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
-</a>
+</div>
