--- a/sweetwater/src/app/footer/bottom_nav_bar.component.html
+++ b/sweetwater/src/app/footer/bottom_nav_bar.component.html
@@ -5,7 +5,7 @@
                 <div>
                     <ul class="nav list-group">
                         <li class="nav-item"><a class="nav-link text-black" href="#">
-                                <img src="alan-moon@2x.png.auto.png" alt="Picture">
+                                <img src="https://media.sweetwater.com/api/i/f-webp__h-110__w-110__fit-cover__ha-a94004e94cf4894c__hmac-1abda9bc77aabc25ac13cfb10804e29a87d376e9/include/ses/left/kris-eckman@2x.png.auto.webp" alt="Picture">
                             </a></li>
                         <li class="nav-item"><a class="nav-link text-black" href="#">
                                 NEED HELP?
